tests/passes/well-formed/main-external-cell.expect
---CODE---
1
---STDERR---
Error: tests/passes/well-formed/constant-external-cell.futil
7 |    external m = std_const(2,1);
  |             ^ Malformed Structure: external cell not allowed for main component
