tests/passes/well-formed/main-external-cell.futil
// -p well-formed
import "primitives/core.futil";
import "primitives/binary_operators.futil";
component main(@go go: 1, @clk clk: 1, @reset reset: 1) -> (@done done: 1) {
  cells {
    r = std_reg(32);
    external m = std_const(2,1);
  }
  wires {
  }

  control {
  }
}
